--- a/styles.css
+++ b/styles.css
@@ -59,7 +59,7 @@ body {
 .statement-link {
     position: absolute;
     bottom: 0%; /* Позиционируйте как вам нужно */
-    right: 30%; /* Подвиньте вправо */
+    right: 2%; /* Подвиньте вправо */
     z-index: 2; /* Убедитесь, что ссылка выше главного изображения */
     transition: transform 0.3s; /* Плавный переход */
 }
@@ -69,6 +69,6 @@ body {
 }
 
 .statement-image {
-    width: 200px; /* Задаем конкретный размер */
+    width: 10%; /* Задаем конкретный размер */
     height: auto; /* Сохранить пропорции */
 }
