--- a/styles.css
+++ b/styles.css
@@ -13,7 +13,7 @@ body {
     display: grid;
     grid-template-columns: repeat(6, 1fr); /* Создание 6 колонок с равной шириной */
     grid-gap: 20px; /* Расстояние между элементами */
-    position: relative;
+    position: center;
     width: 100%;
     height: 100vh;
     text-align: center;
